# heretic

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  imgui.ini
lib/: cimgui.c  libs.c  nuklear.c  shell.html  sokol.c
lib/sokol/: shell.html
src/: background.c  background.h  bin.c  bin.h  camera.c  camera.h  color.h  cube.h  defines.h  dialog.c  dialog.h  event.c  event.h  fft.c  fft.h  filesystem.c  filesystem.h  filesystem_index.h  font.c  font.h  game.c  game.h  gfx.c  gfx.h  gfx_background.c  gfx_background.h  gfx_line.c  gfx_line.h  gfx_model.c  gfx_model.h  gfx_sprite.c  gfx_sprite.h  gui.c  gui.h  image.c  image.h  instruction.c  instruction.h  io.c  io.h  (+62 more)
